--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9e630d6d",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "918a8e1a",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "11bbc6e2",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c8246c48",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "id": "bc0e1067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AgeCategory\n",
+       "Age 65 to 69       47099\n",
+       "Age 60 to 64       44511\n",
+       "Age 70 to 74       43472\n",
+       "Age 55 to 59       36821\n",
+       "Age 80 or older    36251\n",
+       "Age 50 to 54       33644\n",
+       "Age 75 to 79       32518\n",
+       "Age 40 to 44       29942\n",
+       "Age 45 to 49       28531\n",
+       "Age 35 to 39       28526\n",
+       "Age 18 to 24       26941\n",
+       "Age 30 to 34       25807\n",
+       "Age 25 to 29       21990\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"AgeCategory\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8b634d67",
    "metadata": {},
    "outputs": [
@@ -540,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4ba40335",
    "metadata": {},
    "outputs": [
@@ -601,7 +636,7 @@
     "|ECigarette Usage|Uso de cigarrillos electrónicos|Categórica|Never, Former, Current|\n",
     "|Chest Scan|Se se ha realizado un escáner torácico|Booleana|Yes/No|\n",
     "|Race Ethnicity Category|Grupo racial o étnico|Categórica|White, Black, Hispanic, etc.|\n",
-    "|Age Category|Edad de la persona encuestada|Numérica|Edad|\n",
+    "|Age Category|Edad de la persona encuestada|Numérica|Rangos de edad|\n",
     "|Height In Meters|Altura de la persona encuestada|Numérica|Metros|\n",
     "|Weight In Kilograms|Peso de la persona encuestada|Numérica|kg|\n",
     "|BMI|Índice de Masa Corporal|Numérica|kg|\n",
@@ -617,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "25ec32fb",
    "metadata": {},
    "outputs": [
@@ -639,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bcbe4e68",
    "metadata": {},
    "outputs": [
@@ -697,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e3c9f899",
    "metadata": {},
    "outputs": [
@@ -720,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5c388704",
    "metadata": {},
    "outputs": [
@@ -738,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d81189ca",
    "metadata": {},
    "outputs": [],
@@ -761,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b10dd091",
    "metadata": {},
    "outputs": [
@@ -780,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b74fc569",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "317b413d",
    "metadata": {},
    "outputs": [
@@ -1249,11 +1284,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "00e1b423",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Detectar errores y cambiarlos\n",
+    "\n",
+    "- Muchas de las columnas donde hay valores numéricos (Sleep Hours, Age Category, Physical Health Days, Mental Health Days, etc. son booleanos. Quitar el 0 y dejarlo como un entero)\n",
+    "- Los nombres de las columnas no tienen espacios. Sería ideal añadirle ese espacio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1ab6b4e",
+   "metadata": {},
    "source": []
   }
  ],
