--- a/data/Analisis_Multivariante_Final.ipynb
+++ b/data/Analisis_Multivariante_Final.ipynb
@@ -455,7 +455,6 @@
     "\n",
     "df_sel = df[cols].dropna()\n",
     "\n",
-    "# Matriz de correlación\n",
     "corr = df_sel.corr()\n",
     "\n",
     "plt.figure(figsize=(10, 8))\n",
@@ -467,24 +466,33 @@
     "    linewidths=0.5\n",
     ")\n",
     "plt.title(\"Heatmap de correlaciones entre variables de salud\")\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "326135bc",
+   "metadata": {},
+   "source": [
+    "## NOTAS\n",
+    "Aquí podemos ver las variables que van más relacionadas y por ende las que más sentido tiene comparar.  \n",
+    "Ignoramos los \"1.00\" porque son la misma variable.\n",
     "\n",
-    "# Aquí podemos ver las variables que van más relacionadas y por ende las que más sentido tiene comparar\n",
-    "# Ignoramos los \"1.00\" porque son la misma variable obv\n",
-    "# Que podemos observar:\n",
-    "#\n",
-    "#       - Los problemas cardiovasculares en general van bastate relacionados \n",
-    "#         con los ataques al corazón (en especial la angina de pecho)\n",
-    "#\n",
-    "#       - La diabetes por su lado también se relaciona con los ataques al corazón.\n",
-    "#\n",
-    "#       - Un IMC elevado (sobrepeso u obesidad) se ve más relacionado con mayores problemas de\n",
-    "#         salud física y sobretodo con la presencia de diabetes\n",
-    "#\n",
-    "#       - A su vez, los días de mala salud física y mental se ven bastante relacionados\n",
-    "#\n",
-    "# En conclusión, este gráfico nos permite relacionar las variables más importantes, observando las\n",
-    "# que se ven más relacionadas claramente entre sí."
+    "Que podemos observar:\n",
+    "\n",
+    "- Los problemas cardiovasculares en general van bastate relacionados  \n",
+    "  con los ataques al corazón (en especial la angina de pecho).\n",
+    "\n",
+    "- La diabetes por su lado también se relaciona con los ataques al corazón.\n",
+    "\n",
+    "- Un IMC elevado (sobrepeso u obesidad) se ve más relacionado con mayores problemas de  \n",
+    "  salud física y sobretodo con la presencia de diabetes.\n",
+    "\n",
+    "- A su vez, los días de mala salud física y mental se ven bastante relacionados.\n",
+    "\n",
+    "#### Conclusión\n",
+    "este gráfico nos permite relacionar las variables más importantes, observando las  \n",
+    "que se ven más relacionadas claramente entre sí."
    ]
   },
   {
@@ -526,27 +534,35 @@
     "plt.ylabel(\"Proporción de personas con infarto\")\n",
     "plt.xlabel(\"Horas de sueño\")\n",
     "plt.legend(title=\"Salud general\")\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26eaadca",
+   "metadata": {},
+   "source": [
+    "## NOTAS\n",
+    "En este gráfico observamos las siguientes conclusiones:\n",
     "\n",
-    "# En este gráfico observamos las siguientes conclusiones:\n",
+    "- Existe una relación clara entre la salud general y la proporción de infartos:  \n",
+    "  a peor salud general (niveles más bajos en la escala), mayor es la proporción  \n",
+    "  de personas que han sufrido un infarto, independientemente de las horas de sueño.\n",
     "\n",
-    "#   - Existe una relación clara entre la salud general y la proporción de infartos:\n",
-    "#     a peor salud general (niveles más bajos en la escala), mayor es la proporción\n",
-    "#     de personas que han sufrido un infarto, independientemente de las horas de sueño.\n",
+    "- Las horas de sueño extremas se asocian con mayor riesgo: dormir muy  \n",
+    "  pocas horas (4 o menos) o demasiadas (9 o más) tiende a mostrar proporciones  \n",
+    "  más altas de infarto frente a dormir un número intermedio de horas.\n",
     "\n",
-    "#   - Las horas de sueño extremas se asocian con mayor riesgo: dormir muy\n",
-    "#     pocas horas (≈4 o menos) o demasiadas (≈9 o más) tiende a mostrar proporciones\n",
-    "#     más altas de infarto frente a dormir un número intermedio de horas.\n",
+    "- Dormir entre 6 y 8 horas parece estar asociado con menores  \n",
+    "  proporciones de infarto, especialmente en personas con mejor salud general.\n",
     "\n",
-    "#   - Dormir entre 6 y 8 horas parece estar asociado con menores\n",
-    "#     proporciones de infarto, especialmente en personas con mejor salud general.\n",
+    "- El sueño no actúa de forma aislada: incluso con horas de sueño “adecuadas”,  \n",
+    "  una mala salud general mantiene un riesgo relativamente alto.\n",
     "\n",
-    "#   - El sueño no actúa de forma aislada: incluso con horas de sueño “adecuadas”,\n",
-    "#     una mala salud general mantiene un riesgo relativamente alto.\n",
-    "\n",
-    "# En resumen, el gráfico refuerza que una buena salud general y un patrón de sueño\n",
-    "# moderado se asocian con menor proporción de infartos, mientras que la mala salud\n",
-    "# y los extremos de sueño aumentan el riesgo."
+    "#### Conclusión\n",
+    "En resumen, el gráfico refuerza que una buena salud general y un patrón de sueño  \n",
+    "moderado se asocian con menor proporción de infartos, mientras que la mala salud  \n",
+    "y los extremos de sueño aumentan el riesgo.\n"
    ]
   },
   {
@@ -584,27 +600,35 @@
     "plt.title(\"Infarto según tabaquismo y uso de cigarrillo electrónico\")\n",
     "plt.ylabel(\"Proporción de infartos\")\n",
     "plt.xlabel(\"Estado de fumador\")\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeaca342",
+   "metadata": {},
+   "source": [
+    "## Notas\n",
+    "En este caso, el gráfico nos presenta las siguientes conclusiones:\n",
     "\n",
-    "# En este caso, el gráfico nos presenta las siguientes conclusiones:\n",
+    "- Fumar se asocia con una mayor proporción de infartos: a medida que el  \n",
+    "  estado de fumador aumenta (de no fumador a fumador más intenso), la  \n",
+    "  proporción de infartos crece de manera clara.\n",
     "\n",
-    "#   - Fumar se asocia con una mayor proporción de infartos: a medida que el\n",
-    "#     estado de fumador aumenta (de no fumador a fumador más intenso), la\n",
-    "#     proporción de infartos crece de manera clara.\n",
+    "- El uso de cigarrillo electrónico no elimina el riesgo: incluso entre  \n",
+    "  quienes usan cigarrillo electrónico, la proporción de infartos sigue  \n",
+    "  siendo relevante, especialmente en fumadores.\n",
     "\n",
-    "#   - El uso de cigarrillo electrónico no elimina el riesgo: incluso entre\n",
-    "#     quienes usan cigarrillo electrónico, la proporción de infartos sigue\n",
-    "#     siendo relevante, especialmente en fumadores.\n",
+    "- La combinación de tabaquismo y uso de e-cigarrillo muestra  \n",
+    "  los valores más altos: los fumadores que además usan cigarrillo  \n",
+    "  electrónico presentan las mayores proporciones de infarto.\n",
     "\n",
-    "#   - La combinación de tabaquismo y uso de e-cigarrillo muestra\n",
-    "#     los valores más altos: los fumadores que además usan cigarrillo\n",
-    "#     electrónico presentan las mayores proporciones de infarto.\n",
+    "- No fumadores y no usuarios de e-cigarrillo presentan el menor riesgo, lo  \n",
+    "  que refuerza el efecto negativo del consumo de nicotina sobre la salud cardiovascular.\n",
     "\n",
-    "#   - No fumadores y no usuarios de e-cigarrillo presentan el menor riesgo, lo\n",
-    "#     que refuerza el efecto negativo del consumo de nicotina sobre la salud cardiovascular.\n",
-    "\n",
-    "# En conjunto, el gráfico sugiere que tanto el tabaquismo tradicional como el uso de cigarrillos\n",
-    "# electrónicos están asociados con un mayor riesgo de infarto, y que combinarlos puede agravar aún más dicho riesgo."
+    "#### Conclusión\n",
+    "En conjunto, el gráfico sugiere que tanto el tabaquismo tradicional como el uso de cigarrillos  \n",
+    "electrónicos están asociados con un mayor riesgo de infarto, y que combinarlos puede agravar aún más dicho riesgo.\n"
    ]
   },
   {
@@ -645,33 +669,33 @@
     "plt.ylabel(\"Proporción de infartos\")\n",
     "plt.xlabel(\"Edades\")\n",
     "plt.xticks(rotation=15)\n",
-    "plt.show()\n",
-    "\n",
-    "# De forma breve, este gráfico permite extraer estas conclusiones:\n",
-    "\n",
-    "#   - La proporción de infartos aumenta claramente con la edad en ambos sexos,\n",
-    "#     siendo muy baja en edades jóvenes y creciendo de forma progresiva a partir de los 45–50 años.\n",
-    "\n",
-    "#   - Los hombres presentan una mayor proporción de infartos que las mujeres en\n",
-    "#     todos los grupos de edad, y la diferencia se hace más marcada a partir de la mediana edad.\n",
-    "\n",
-    "#   - En edades avanzadas (70 años o más) el riesgo aumenta de manera notable en\n",
-    "#     ambos sexos, aunque sigue siendo más alto en hombres.\n",
-    "\n",
-    "#   - Las mujeres muestran un incremento más tardío, lo que sugiere\n",
-    "#     un posible efecto protector en edades más jóvenes.\n",
-    "\n",
-    "# Dicho esto, el gráfico indica que la edad es un factor de riesgo clave para los infartos,\n",
-    "# y que el sexo masculino presenta un riesgo sistemáticamente mayor, especialmente en edades avanzadas."
+    "plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "06017de4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Notas\n",
+    "De forma breve, este gráfico permite extraer estas conclusiones:\n",
+    "\n",
+    "- La proporción de infartos aumenta claramente con la edad en ambos sexos,  \n",
+    "  siendo muy baja en edades jóvenes y creciendo de forma progresiva a partir de los 45–50 años.\n",
+    "\n",
+    "- Los hombres presentan una mayor proporción de infartos que las mujeres en  \n",
+    "  todos los grupos de edad, y la diferencia se hace más marcada a partir de la mediana edad.\n",
+    "\n",
+    "- En edades avanzadas (70 años o más) el riesgo aumenta de manera notable en  \n",
+    "  ambos sexos, aunque sigue siendo más alto en hombres.\n",
+    "\n",
+    "- Las mujeres muestran un incremento más tardío, lo que sugiere  \n",
+    "  un posible efecto protector en edades más jóvenes.\n",
+    "\n",
+    "#### Conclusión\n",
+    "Dicho esto, el gráfico indica que la edad es un factor de riesgo clave para los infartos,  \n",
+    "y que el sexo masculino presenta un riesgo sistemáticamente mayor, especialmente en edades avanzadas."
+   ]
   }
  ],
  "metadata": {
